# winzy-selected-file

./: README.md  pyproject.toml
tests/: test_winzy_selected_file.py
winzy_selected_file/: __init__.py
